# Salesforce-WebDev

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DIFF_REPORT.md  Dockerfile  GEMINI.md  IMPACT_REPORT.md  NOTIFICATION_DIGEST.md  PLANO_DE_ACAO.md  QUALITY_REPORT.md  QWEN.md  README.en.md  README.md  REFATORACAO_STATUS.md  REGRESSION_REPORT.md  audit-fix.patch  check_run.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.hooks/: pytest-pre-push.sh
data/: trailhead_categories.json
docs/: improvements.md  index.md  refatoracao.md
k8s/: cronjob.yaml  deployment.yaml  service.yaml
releases/: history.json
src/: ai_automation.py  ai_automation.py.rej  analytics.py  analytics.py.rej  api.py  api.py.rej  cache_manager.py  circuit_breaker.py  config.py  dashboard.py  dashboard.py.rej  dashboard_template.html  events.py  exceptions.py  feature_classifier.py  feature_enricher.py  generator.py  health.py  health.py.rej  heuristic_classifier.py  i18n.py  impact_analyzer.py  impact_analyzer.py.rej  issue_triage.py  issue_triage.py.rej  llm_service.py  logger.py  main.py  main.py.rej  models.py  nl_search.py  notifications.py  notifications.py.rej  openapi_spec.json  orchestrator.py  parser.py  parser.py.rej  pdf_parser.py  readme_updater.py  release_docs.py  (+12 more)
tests/: conftest.py  test_ai_automation.py  test_ai_enrichment.py  test_ai_integration.py  test_analytics.py  test_api_auth.py  test_api_coverage.py  test_cache_manager.py  test_config.py  test_coverage_boost.py  test_coverage_gaps.py  test_dashboard.py  test_e2e.py  test_events.py  test_feature_classifier.py  test_feature_links.py  test_health.py  test_i18n.py  test_impact_analyzer.py  test_issue_triage.py  test_llm_service.py  test_main_coverage.py  test_main_extra.py  test_nl_search.py  test_notifications.py  test_phase2_coverage.py  test_release_summarizer.py  test_salesforce_coverage.py  test_salesforce_refactored.py  test_scraper_coverage.py  test_scraper_refactored.py  test_smart_notifications.py  test_src_logger.py  test_src_main.py  test_src_parser.py  test_src_pipeline_components.py  test_translator.py  (+1 more)
(+1336 files in other folders)
