[project]
name = "salesforce-release-notes"
version = "3.1.0"
description = "Pipeline ETL para extração, classificação e versionamento das Salesforce Release Notes"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0,<5",
    "lxml>=6.1.1,<7",
    "playwright>=1.60.0,<2",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
    "tenacity>=9.0.0",
    "aiohttp>=3.11.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6,<10",
]
dev = [
    "black>=26.5.1,<27",
    "ruff>=0.15.18,<1",
    "pytest>=9.1.1,<10",
    "pytest-xdist>=3.8.0,<4",
    "pytest-cov>=7.1.0,<8",
    "mypy>=2.1.0,<3",
    "freezegun>=1.4.0",
    "types-requests>=2.33.0,<3",
    "types-beautifulsoup4>=4.12.0,<5",
    "pre-commit>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["F401", "F821", "E741"]  # Unused imports, undefined vars, ambiguous names

[tool.mypy]
strict = true
mypy_path = "stubs"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --tb=short --durations=10"
filterwarnings = [
    "ignore::DeprecationWarning:bs4.*",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
